syntax = "proto3";

package pb;

service Talaria{
  rpc Create(BufferInfo) returns (CreateResponse) {}
  rpc Write(stream WriteDataPacket) returns (WriteResponse)  {}
  rpc Read(BufferInfo) returns (stream ReadDataPacket) {}
  rpc Info(BufferInfo) returns (InfoResponse) {}
}

message BufferInfo{
	string name = 1;
  uint64 startIndex = 2;
  bool startFromEnd = 3;
}

message WriteDataPacket {
  string name = 1;
  bytes message = 2;
}

message ReadDataPacket {
  bytes message = 1;
  uint64 index = 2;
}

message CreateResponse {
  string uri = 1;
}

message WriteResponse {
}

message InfoResponse {
  string uri = 1;
}
